--- a/time-management.css
+++ b/time-management.css
@@ -1,29 +1,18 @@
-@import "./node_modules/bootstrap/dist/css/bootstrap.min.css";
+/* @import "./node_modules/bootstrap/dist/css/bootstrap.min.css"; */
 
-#time-management-banner {
+/* #time-management-banner {
     fill: aqua;
     color:darkslateblue;
     height: 100%;
     width: 100%;
     position:absolute;
     top:0;
-}
+} */
 
-#timer {
+/* #timer {
     color: red;
     fill: aqua;
     background: yellow;
     height: 20%;
     width: 100%;
-}
-
-/* * {
-    visibility: hidden;
-    margin:0,; padding:0;
-}
-
-.time-management * {
-    visibility:visible;
-    display:block;
-    font-size: xx-large;
-  } */
+} */
